deployments/k8s/infrastructure/base/ingress-controller/dashboard-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-dashboard-route
  namespace: traefik
  labels:
    app: traefik
    app.kubernetes.io/name: traefik-dashboard-route
    app.kubernetes.io/component: dashboard
spec:
  parentRefs:
    - name: shared-gateway
      namespace: traefik
  hostnames:
    - traefik.discky.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: dashboard-auth
      backendRefs:
        - name: traefik-dashboard
          port: 8080
